--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="thunder-text.css">
+    <link rel="stylesheet" href="style.css">
     <title>Text Writing Animation | MS Prime Tech Services</title>
   </head>
   <body>
@@ -14,6 +14,6 @@
       <canvas id="canvas"></canvas>
     </div>
 <!-- Created and uploaded by MS Prime Tech Services -->
-    <script src="thunder-text.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
